new proj/src/objects/GE_HQ_Login_History__c.object
<CustomObject>
    <fields>
        <fullName>GE_HQ_APIVersion__c</fullName>
        <description>Displays the API version used by the client.</description>
        <label>API Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_ApiType__c</fullName>
        <description>Indicates the API type, for example Soap Enterprise.</description>
        <label>Api Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Application__c</fullName>
        <description>The application used to access the organization.</description>
        <label>Application</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Browser__c</fullName>
        <description>The current browser version.</description>
        <label>Browser</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_ClientVersion__c</fullName>
        <description>Version of the API client.</description>
        <label>Client Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_LoginTime__c</fullName>
        <description>Time zone is based on GMT.</description>
        <label>Login Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_HQ_LoginType__c</fullName>
        <description>The type of login, for example, Application.</description>
        <label>Login Type</label>
        <picklist>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_LoginURL__c</fullName>
        <description>URL from which the login request is coming.</description>
        <label>Login URL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Login_History_Id__c</fullName>
        <externalId>true</externalId>
        <label>Login History Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Platform__c</fullName>
        <description>Operating system on the login machine.</description>
        <label>Platform</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_SourceIp__c</fullName>
        <description>IP address of the machine from which the login request is coming. This can be an IPv4 or IPv6 address in API version 23.0 or later. In API version 22.0 or earlier, this is an IPv4 address, and IPv6 addresses are null.</description>
        <label>Source Ip</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Status__c</fullName>
        <description>Displays the status of the attempted login. Status is either success or a reason for failure.</description>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_UserID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the user logging in.</description>
        <label>User ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Login_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_User_Name__c</fullName>
        <formula>GE_HQ_UserID__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Name</label>
        <type>Text</type>
    </fields>
    <label>Login History</label>
    <nameField>
        <label>Login History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Login Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>